# RetriCo

./: .gitignore  README.md  pyproject.toml
src/grapsit/: __init__.py  cli.py
src/grapsit/construct/: __init__.py  chunk_embedder.py  chunker.py  entity_embedder.py  graph_writer.py  ingest.py  linker.py  ner_gliner.py  ner_llm.py  relex_gliner.py  relex_llm.py  store_reader.py
src/grapsit/core/: __init__.py  base.py  builders.py  dag.py  factory.py  registry.py
src/grapsit/extraction/: gliner_engine.py  (+3 more)
src/retrico/: __init__.py  cli.py
tests/: conftest.py
tests/integration/: test_build_pipeline.py  test_linker_pipeline.py  test_query_pipeline.py
tests/unit/: test_base_retriever.py  test_builder.py  test_chunk_embedder.py  test_chunk_embedding_retriever.py  test_chunk_id_list.py  test_chunk_retriever.py  test_chunker.py  test_community.py  test_community_retriever.py  test_dag.py  test_data_ingest.py  test_embeddings.py  test_entity_embedder.py  test_entity_embedding_retriever.py  test_extraction_engines.py  test_falkordb_lite_store.py  test_falkordb_store.py  test_fusion.py  test_graph_keyword_retriever.py  test_graph_store.py  test_graph_writer.py  test_keyword_retriever.py  test_kg_embedding_storer.py  test_kg_scorer.py  test_kg_trainer.py  test_kg_triple_reader.py  test_linker.py  test_llm_client.py  test_memgraph_store.py  test_ner_gliner.py  test_ner_llm.py  test_path_retriever.py  test_pdf_reader.py  test_query_parser.py  test_reasoner.py  test_relational_stores.py  test_relex_gliner.py  test_relex_llm.py  test_retrieval_strategies.py  test_retriever.py  (+9 more)
(+101 files in other folders)
